--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
+    "@types/mongoose": "^5.11.97",
+    "@types/validator": "^13.12.2",
     "@xstate/react": "^4.1.3",
     "formik": "^2.4.6",
+    "mongoose": "^8.7.3",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "uuid": "^11.0.0",
+    "validator": "^13.12.0",
     "xstate": "^5.18.2",
     "yup": "^1.4.0",
     "yup-phone": "^1.3.2",
